--- a/markdown-chrome-extensions-demo/index.html
+++ b/markdown-chrome-extensions-demo/index.html
@@ -1,46 +1,54 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html>
 <head>
-    <title></title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="js/jquery.min.js"></script>
-    <link href="css/bootstrap.css" rel="stylesheet">
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/marked.min.js"></script>
-    <style>
-        #header{
-            width: 100%;
-            height: 40px;
-            background: #2e6da4;
-            line-height: 40px;
-            color: white;
-            font-size: 20px;
-            margin-bottom: 60px;
-        }
-        #md,#html{
-            height: 510px;
-        }
-        #md{
-            resize: none;
-        }
-        #html{
-            border: solid 1px darkgrey;
-            border-radius: 5px;
-        }
-    </style>
+  <title>Markdown Editor</title>
+  <link rel="stylesheet" href="./lib/codemirror/lib/codemirror.css">
+  <link rel="stylesheet" href="./lib/highlight.js/default.css">
+  <link rel="stylesheet" href="./css/custom.css">
+  <script src="lib/marked/marked.js"></script>
+  <script src="lib/highlight.js/highlight.pack.js"></script>
+  <script src="lib/codemirror/lib/codemirror.js"></script>
+  <script src="lib/codemirror/addon/mode/overlay.js"></script>
+  <script src="lib/codemirror/addon/mode/simple.js"></script>
+  <script src="lib/codemirror/mode/coffeescript/coffeescript.js"></script>
+  <script src="lib/codemirror/mode/css/css.js"></script>
+  <script src="lib/codemirror/mode/dart/dart.js"></script>
+  <script src="lib/codemirror/mode/diff/diff.js"></script>
+  <script src="lib/codemirror/mode/django/django.js"></script>
+  <script src="lib/codemirror/mode/dockerfile/dockerfile.js"></script>
+  <script src="lib/codemirror/mode/gfm/gfm.js"></script>
+  <script src="lib/codemirror/mode/go/go.js"></script>
+  <script src="lib/codemirror/mode/haskell/haskell.js"></script>
+  <script src="lib/codemirror/mode/htmlembedded/htmlembedded.js"></script>
+  <script src="lib/codemirror/mode/htmlmixed/htmlmixed.js"></script>
+  <script src="lib/codemirror/mode/http/http.js"></script>
+  <script src="lib/codemirror/mode/javascript/javascript.js"></script>
+  <script src="lib/codemirror/mode/lua/lua.js"></script>
+  <script src="lib/codemirror/mode/markdown/markdown.js"></script>
+  <script src="lib/codemirror/mode/nginx/nginx.js"></script>
+  <script src="lib/codemirror/mode/perl/perl.js"></script>
+  <script src="lib/codemirror/mode/php/php.js"></script>
+  <script src="lib/codemirror/mode/properties/properties.js"></script>
+  <script src="lib/codemirror/mode/puppet/puppet.js"></script>
+  <script src="lib/codemirror/mode/python/python.js"></script>
+  <script src="lib/codemirror/mode/rpm/rpm.js"></script>
+  <script src="lib/codemirror/mode/ruby/ruby.js"></script>
+  <script src="lib/codemirror/mode/sass/sass.js"></script>
+  <script src="lib/codemirror/mode/scheme/scheme.js"></script>
+  <script src="lib/codemirror/mode/shell/shell.js"></script>
+  <script src="lib/codemirror/mode/sql/sql.js"></script>
+  <script src="lib/codemirror/mode/toml/toml.js"></script>
+  <script src="lib/codemirror/mode/tornado/tornado.js"></script>
+  <script src="lib/codemirror/mode/xml/xml.js"></script>
+  <script src="lib/codemirror/mode/yaml/yaml.js"></script>
 </head>
 <body>
-<div id="header" class="text-center">MarkDown解析器</div>
-<div class="container">
-    <div class="row">
-        <div class="col-sm-6 col-lg-6 col-md-6">
-            <textarea id="md" class="form-control"  placeholder="请输入Markdown代码"></textarea>
-        </div>
-        <div id="html" class="col-lg-6 col-sm-6 col-md-6"></div>
-    </div>
-</div>
+  <div id="in"><form><textarea id="code" name="code">
+
+
+</textarea></form></div>
+  <div id="out"></div>
+  <div id="print"></div>
+  <script src="app.js"></script>
 </body>
-<script src="js/index.js"></script>
- 
 </html>
