--- a/markdown-chrome-extensions-demo/index.html
+++ b/markdown-chrome-extensions-demo/index.html
@@ -49,6 +49,6 @@
 </textarea></form></div>
   <div id="out"></div>
   <div id="print"></div>
-  <script src="app.js"></script>
+  <script src="extension.js"></script>
 </body>
 </html>
