具体功能已经实现

--- a/markdown-chrome-extensions-demo/popup.html
+++ b/markdown-chrome-extensions-demo/popup.html
@@ -12,6 +12,12 @@
 			<a href="#" id="open_index">打开编辑器</a>
 		</div>
 	</h2>
+
+	<!-- <h2>
+		<div>
+			<a href="#" id="open_a_file">打开文件</a>
+		</div>
+	</h2> -->
 	<!-- <script type="text/javascript" src="js/popup.js">打开编辑器</script> -->
 
 	<script type="text/javascript" src="js/jquery.min.js"></script>
