--- a/markdown-chrome-extensions-demo/index.html
+++ b/markdown-chrome-extensions-demo/index.html
@@ -5,6 +5,9 @@
   <link rel="stylesheet" href="./lib/codemirror/lib/codemirror.css">
   <link rel="stylesheet" href="./lib/highlight.js/default.css">
   <link rel="stylesheet" href="./css/custom.css">
+  <link rel="stylesheet" href="css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/menu.css">
+  <script type="text/javascript" src="js/jquery.min.js"></script>
   <script src="lib/marked/marked.js"></script>
   <script src="lib/highlight.js/highlight.pack.js"></script>
   <script src="lib/codemirror/lib/codemirror.js"></script>
@@ -48,7 +51,17 @@
 
 </textarea></form></div>
   <div id="out"></div>
-  <div id="print"></div>
+  <!-- <div id="print"></div> -->
+  <div class="navbar">
+    <i class="fa fa-bars" aria-hidden="true"></i>
+    <ul class="menu">
+        <li id="plus"><a href="#" class="fa fa-plus-square"></a></li>
+        <li id="folder"><input id="open" type="file" href="#" class="fa fa-folder-open"></li>
+        <li id="floppy"><a href="#" class="fa fa-floppy-o"></a></li>
+        <li id="print"><a href="#" class="fa fa-print"></a></li>
+        <!-- <li><input style="display:none" type="file" id="upload"></li> -->
+    </ul>
+</div>
   <script src="extension.js"></script>
 </body>
 </html>
