美化了popup界面,添加了about页面 基本完成

--- a/markdown-chrome-extensions-demo/popup.html
+++ b/markdown-chrome-extensions-demo/popup.html
@@ -3,15 +3,22 @@
 <head>
 	<meta charset="utf-8"/>
 	<title>popup</title>
+	<link rel="stylesheet" href="css/popup.css">
 
 </head>
-<body style="width:200px;min-height:200px;">
-	<h1></h1>功能:</h1>
-	<h2>
+<body style="width:200px;min-height:130px;">
+
+	<div class="holder bt1">
+		<button id="open_index" class="rkmd-btn btn-white ripple-effect ripple-pink">打开编辑器</button></div>
+	</div>
+	<div class="holder bt2">
+		<button id="open_about" class="rkmd-btn btn-white ripple-effect ripple-pink">关于</button></div>
+	</div>
+	<!-- <h2>
 		<div>
 			<a href="#" id="open_index">打开编辑器</a>
 		</div>
-	</h2>
+	</h2> -->
 
 	<!-- <h2>
 		<div>
