--- a/markdown-chrome-extensions-demo/index.html
+++ b/markdown-chrome-extensions-demo/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Markdown Editor</title>
+  <meta charset="UTF-8">
   <link rel="stylesheet" href="./lib/codemirror/lib/codemirror.css">
   <link rel="stylesheet" href="./lib/highlight.js/default.css">
   <link rel="stylesheet" href="./css/custom.css">
@@ -45,23 +47,27 @@
   <script src="lib/codemirror/mode/xml/xml.js"></script>
   <script src="lib/codemirror/mode/yaml/yaml.js"></script>
 </head>
+
 <body>
-  <div id="in"><form><textarea id="code" name="code">
-
-
-</textarea></form></div>
+  <div id="in">
+    <form>
+    <textarea id="code" name="code"># 毕业设计 
+## 基于Chrome扩展插件的Markdown文本编辑器
+### 计1502 赵佩然
+    </textarea>
+    </form>
+  </div>
   <div id="out"></div>
-  <!-- <div id="print"></div> -->
   <div class="navbar">
     <i class="fa fa-bars" aria-hidden="true"></i>
     <ul class="menu">
-        <li id="plus"><a href="#" class="fa fa-plus-square"></a></li>
-        <li id="folder"><input id="open" type="file" href="#" class="fa fa-folder-open"></li>
-        <li id="floppy"><a href="#" class="fa fa-floppy-o"></a></li>
-        <li id="print"><a href="#" class="fa fa-print"></a></li>
-        <!-- <li><input style="display:none" type="file" id="upload"></li> -->
+      <li id="plus"><a href="#" class="fa fa-plus-square"></a></li>
+      <li id="folder"><input id="open" type="file" href="#" class="fa fa-folder-open"></li>
+      <li id="floppy"><a href="#" class="fa fa-floppy-o"></a></li>
+      <li id="print"><a href="#" class="fa fa-print"></a></li>
     </ul>
-</div>
+  </div>
   <script src="extension.js"></script>
 </body>
+
 </html>
