--- a/markdown-chrome-extensions-demo/popup.html
+++ b/markdown-chrome-extensions-demo/popup.html
@@ -5,31 +5,18 @@
     <meta charset="utf-8" />
     <title>popup</title>
     <link rel="stylesheet" href="css/popup.css">
-
+    <script type="text/javascript" src="js/jquery.min.js"></script>
 </head>
 
 <body style="width:200px;min-height:130px;">
 
     <div class="holder bt1">
-        <button id="open_index" class="rkmd-btn btn-white ripple-effect ripple-pink">打开编辑器</button></div>
+        <button id="open_index" class="rkmd-btn btn-white ripple-effect ripple-pink">打开编辑器</button>
     </div>
     <div class="holder bt2">
-        <button id="open_about" class="rkmd-btn btn-white ripple-effect ripple-pink">关于</button></div>
+        <button id="open_about" class="rkmd-btn btn-white ripple-effect ripple-pink">关于</button>
     </div>
-    <!-- <h2>
-		<div>
-			<a href="#" id="open_index">打开编辑器</a>
-		</div>
-	</h2> -->
 
-    <!-- <h2>
-		<div>
-			<a href="#" id="open_a_file">打开文件</a>
-		</div>
-	</h2> -->
-    <!-- <script type="text/javascript" src="js/popup.js">打开编辑器</script> -->
-
-    <script type="text/javascript" src="js/jquery.min.js"></script>
     <script type="text/javascript" src="js/popup.js"></script>
 </body>
 
