文件夹整理

--- a/markdown-chrome-extensions-demo/popup.html
+++ b/markdown-chrome-extensions-demo/popup.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <title>popup</title>
     <link rel="stylesheet" href="css/popup.css">
-    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="lib/jquery/jquery.min.js"></script>
 </head>
 
 <body style="width:200px;min-height:130px;">
