--- a/markdown-chrome-extensions-demo/index.html
+++ b/markdown-chrome-extensions-demo/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./css/custom.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/menu.css">
-    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="lib/jquery/jquery.min.js"></script>
     <script src="lib/marked/marked.js"></script>
     <script src="lib/highlight.js/highlight.pack.js"></script>
     <script src="lib/codemirror/lib/codemirror.js"></script>
@@ -73,7 +73,7 @@
             </li>
         </ul>
     </div>
-    <script src="extension.js"></script>
+    <script src="js/extension.js"></script>
 </body>
 
 </html>
